--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-APP_ENV=local
+APP_ENV=production
 APP_KEY=base64:yUIDpCzMs2g7L/Bi+kBqQs2lzAHNBVQI1KFm8tqtmLQ=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_LOG_LEVEL=debug
 APP_URL=http://localhost
 
