--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-#DB_DATABASE=samtonu
+#DB_DATABASE=estrogen
 DB_USERNAME=root
 DB_PASSWORD=tieungao
 
